--- a/package.json
+++ b/package.json
@@ -59,8 +59,13 @@
     "core-js": "^3.8.3",
     "firebase": "^8.8.0",
     "hammerjs": "^2.0.8",
+    "net": "^1.0.2",
     "ngx-audio-player": "^11.0.4",
     "rxjs": "^6.6.3",
+    "sockjs": "^0.3.24",
+    "sockjs-client": "^1.5.2",
+    "stomp-client": "^0.9.0",
+    "stompjs": "^2.3.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
